--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "webpack-dev-server --host 0.0.0.0 --config webpack.config.js --devtool eval --progress --hot --inline"
+    "server": "webpack-dev-server --host 0.0.0.0 --config webpack.config.js --devtool eval --progress --hot --inline",
+    "build": "webpack --config webpack.config.build.js --progress --colors --bail"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
   "dependencies": {
     "babel-polyfill": "^6.9.1",
     "clean-webpack-plugin": "^0.1.9",
+    "copy-webpack-plugin": "3.0.1",
     "eslint": "^3.0.0",
     "eslint-loader": "^1.4.0",
     "expose-loader": "^0.7.1",
