--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
     "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
     "clean-webpack-plugin": "^0.1.9",
     "copy-webpack-plugin": "3.0.1",
     "eslint": "^3.0.0",
     "eslint-loader": "^1.4.0",
-    "expose-loader": "^0.7.1",
-    "file-loader": "^0.9.0",
+    "expose-loader": "0.7.1",
     "html-webpack-plugin": "^2.21.0",
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
+  },
+  "dependencies": {    
     "jquery": "^3.0.0",
-    "three": "^0.82.0"
+    "three": "0.152.2"
   }
 }
