--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
   "name": "p1",
   "version": "1.0.0",
-  "description": "",
+  "description": "A VR instrument inspired by the Ondes Martenot",
   "main": "index.js",
-  "scripts": {
-    "server": "webpack-dev-server --host 0.0.0.0 --config webpack.config.js --devtool eval --progress --hot --inline",
-    "build": "webpack --config webpack.config.build.js --progress --colors --bail"
-  },
+	"scripts": {
+		"test": "webpack --config ./bundler/webpack.common.js",
+		"dev": "cross-env SSL_CRT_FILE=.cert/cert.pem SSL_KEY_FILE=.cert/key.pem webpack serve --config ./bundler/webpack.dev.js",
+		"build": "webpack --config ./bundler/webpack.prod.js"
+	},
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "clean-webpack-plugin": "^0.1.9",
-    "copy-webpack-plugin": "3.0.1",
-    "eslint": "^3.0.0",
-    "eslint-loader": "^1.4.0",
-    "expose-loader": "0.7.1",
-    "html-webpack-plugin": "^2.21.0",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.16.5"
-  },
-  "dependencies": {    
-    "jquery": "^3.0.0",
-    "three": "0.152.2"
-  }
+		"@babel/core": "^7.21.3",
+		"@babel/preset-env": "^7.20.2",
+		"babel-loader": "^9.1.2",
+		"clean-webpack-plugin": "^4.0.0",
+		"copy-webpack-plugin": "^11.0.0",
+		"cross-env": "^7.0.3",
+		"css-loader": "^6.7.3",
+		"file-loader": "^6.2.0",
+		"html-loader": "^4.2.0",
+		"html-webpack-plugin": "^5.5.0",
+		"lodash.throttle": "^4.1.1",
+		"mini-css-extract-plugin": "^2.7.4",
+		"portfinder-sync": "^0.0.2",
+		"raw-loader": "^4.0.2",
+		"webpack": "^5.76.2",
+		"webpack-cli": "^5.0.1",
+		"webpack-dev-server": "^4.12.0",
+		"webpack-merge": "^5.8.0"
+	},
+	"dependencies": {
+		"three": "0.152.2"
+	}
 }
